<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".LoginFragment"
    android:id="@+id/login_fragment_details">
    <TextView
        android:id="@+id/text_fname"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_fname_hint" />

    <TextView
        android:id="@+id/text_lname"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lname" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_lname_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_details"
        android:text="@string/dash_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:text="@string/button_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>